<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer"
    tools:openDrawer="start"
    tools:context=".AddEvent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/navcolor"
            app:title="Add Event"
            app:titleTextColor="@color/white" />

    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav"
        app:menu="@menu/navmenu"
        app:headerLayout="@layout/navlogo"
        android:layout_gravity="start"
        android:background="@color/navcolor"
        app:itemTextColor="@color/white"

        app:itemTextAppearance="@style/MenuItems"
        app:itemIconTint="@color/white"
        app:itemIconSize="24dp"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewAddEvent"
            android:layout_width="117dp"
            android:layout_height="46dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:gravity="center"
            android:inputType="none"
            android:text="@string/add_event"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="110dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:inputType="none"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textColorHint="#00000000"
            android:textColorLink="#00000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewAddEvent" />

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="110dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="none"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textColorHint="#00000000"
            android:textColorLink="#00000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

        <TextView
            android:id="@+id/textViewStartTime"
            android:layout_width="110dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="none"
            android:text="@string/start_time"
            android:textColor="@color/black"
            android:textColorHint="#00000000"
            android:textColorLink="#00000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDate" />

        <TextView
            android:id="@+id/textViewLocation"
            android:layout_width="110dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="none"
            android:text="@string/location"
            android:textColor="@color/black"
            android:textColorHint="#00000000"
            android:textColorLink="#00000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewGroupColor" />

        <TextView
            android:id="@+id/textViewNotes"
            android:layout_width="110dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="none"
            android:text="@string/notes"
            android:textColor="@color/black"
            android:textColorHint="#00000000"
            android:textColorLink="#00000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewAddMore" />

        <TextView
            android:id="@+id/textViewAddMore"
            android:layout_width="110dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="none"
            android:text="@string/add_more"
            android:textColor="@color/black"
            android:textColorHint="#00000000"
            android:textColorLink="#00000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewReminder" />

        <TextView
            android:id="@+id/textViewReminder"
            android:layout_width="110dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="none"
            android:text="@string/reminder"
            android:textColor="@color/black"
            android:textColorHint="#00000000"
            android:textColorLink="#00000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewRepeat" />

        <TextView
            android:id="@+id/textViewEndTime"
            android:layout_width="110dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="none"
            android:text="@string/end_time"
            android:textColor="@color/black"
            android:textColorHint="#00000000"
            android:textColorLink="#00000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewStartTime" />

        <TextView
            android:id="@+id/textViewRepeat"
            android:layout_width="110dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="none"
            android:text="@string/repeat"
            android:textColor="@color/black"
            android:textColorHint="#00000000"
            android:textColorLink="#00000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewLocation" />

        <TextView
            android:id="@+id/textViewGroupColor"
            android:layout_width="110dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="none"
            android:text="@string/group_color"
            android:textColor="@color/black"
            android:textColorHint="#00000000"
            android:textColorLink="#00000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewEndTime" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.67"
            app:layout_constraintStart_toEndOf="@+id/textViewTitle"
            app:layout_constraintTop_toBottomOf="@+id/textViewAddEvent" />

        <EditText
            android:id="@+id/editTextStartTime"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="time"
            android:hint="@string/base_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.67"
            app:layout_constraintStart_toEndOf="@+id/textViewStartTime"
            app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

        <EditText
            android:id="@+id/editTextEndTime"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="28dp"
            android:ems="10"
            android:hint="@string/base_time"
            android:inputType="time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textViewEndTime"
            app:layout_constraintTop_toBottomOf="@+id/editTextStartTime" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.67"
            app:layout_constraintStart_toEndOf="@+id/textViewDate"
            app:layout_constraintTop_toBottomOf="@+id/editTextName" />


        <EditText
            android:id="@+id/editTextLocation"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="28dp"
            android:ems="10"
            android:inputType="date"
            android:hint="@string/location_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textViewLocation"
            app:layout_constraintTop_toBottomOf="@+id/spinnerColor" />

        <Spinner
            android:id="@+id/spinnerColor"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textViewGroupColor"
            app:layout_constraintTop_toBottomOf="@+id/editTextEndTime" />

        <Spinner
            android:id="@+id/spinnerRepeat"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.67"
            app:layout_constraintStart_toEndOf="@+id/textViewRepeat"
            app:layout_constraintTop_toBottomOf="@+id/editTextLocation" />

        <Spinner
            android:id="@+id/spinnerReminder"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textViewReminder"
            app:layout_constraintTop_toBottomOf="@+id/spinnerRepeat" />

        <EditText
            android:id="@+id/textViewMaintenance"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="none"
            android:text="@string/work_in_progress"
            android:textColor="@color/black"
            android:textColorHint="#00000000"
            android:textColorLink="#00000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.67"
            app:layout_constraintStart_toEndOf="@+id/textViewAddMore"
            app:layout_constraintTop_toBottomOf="@+id/spinnerReminder" />

        <EditText
            android:id="@+id/editTextNotes"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/notes_hint"
            android:inputType="textLongMessage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.67"
            app:layout_constraintStart_toEndOf="@+id/textViewNotes"
            app:layout_constraintTop_toBottomOf="@+id/textViewMaintenance" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_event"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNotes"
            app:layout_constraintVertical_bias="0.297" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.drawerlayout.widget.DrawerLayout>